[GTK] MiniBrowser doesn't solve the saving location when there are no XDG settings https://bugs.webkit.org/show_bug.cgi?id=117538

Patch by Andres Gomez <agomez@igalia.com> on 2013-06-28
Reviewed by Carlos Garcia Campos.

If the XDG specification is not working for the "Downloads"
directory, let's use HOME as fallback.

* UIProcess/API/gtk/WebKitDownload.cpp:
(webkitDownloadDecideDestination):

Canonical link: https://commits.webkit.org/136210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152155 268f45cc-cd09-0410-ab3c-d52691b4dbfc